Fixed few services - build authentication-service, build kotlin-service, build user-service, build person-service